fix: suggestions position on mobile

--- a/src/components/outline-yext-universal/outline-yext-universal.css
+++ b/src/components/outline-yext-universal/outline-yext-universal.css
@@ -151,7 +151,7 @@ main {
 }
 
 .is-mobile .suggested-list {
-  top: 80px;
+  top: 135px;
   width: 100%;
   margin-right: 1.5rem;
   margin-left: 1.5rem;
